# SLV

./: .gitignore  ABMarkerItem.cpp  ABMarkerItem.h  AboutWidget.cpp  AboutWidget.h  AdjustmentsWidget.cpp  AdjustmentsWidget.h  Annotation.h  AnnotationDialog.cpp  AnnotationDialog.h  AnnotationManager.cpp  AnnotationManager.h  AnnotationPanel.cpp  AnnotationPanel.h  AnnotationWidget.cpp  AnnotationWidget.h  AspectRatioPixmapLabel.cpp  AspectRatioPixmapLabel.h  BlackOpacityWidget.cpp  BlackOpacityWidget.h  CMakeLists.txt  CompositionWidget.cpp  CompositionWidget.h  CursorItem.cpp  CursorItem.h  DecodeThread.cpp  DecodeThread.h  DrawingWidget.cpp  DrawingWidget.h  ErrorsHelper.h  ExtractSequenceWidget.cpp  ExtractSequenceWidget.h  FileCopyThread.cpp  FileCopyThread.h  FileFormatManager.cpp  FileFormatManager.h  FormLineEdit.cpp  FormLineEdit.h  FormLineEditWidget.cpp  FormLineEditWidget.h  (+110 more)
Help/: HelpDialog.cpp  HelpDialog.h
Help/Base/: CategoryBase.cpp  CategoryBase.h  ContentBase.cpp  ContentBase.h
Help/Content/: GeneralContent.cpp  GeneralContent.h  MonoviewContent.cpp  MonoviewContent.h  MultiviewContent.cpp  MultiviewContent.h  ToolbarsContent.cpp  ToolbarsContent.h
Preference/: BasePreferenceFrame.cpp  BasePreferenceFrame.h  BasePreferenceTab.cpp  BasePreferenceTab.h  FormPathEditFrame.cpp  FormPathEditFrame.h  FormShortcutEditFrame.cpp  FormShortcutEditFrame.h  InterfaceTab.cpp  InterfaceTab.h  PathTab.cpp  PathTab.h  PreferenceDialog.cpp  PreferenceDialog.h  ShortcutTab.cpp  ShortcutTab.h
Preference/Frames/: FormComboBoxFrame.cpp  FormComboBoxFrame.h  FormPathEditFrame.cpp  FormPathEditFrame.h  FormShortcutEditFrame.cpp  FormShortcutEditFrame.h
Preference/Tabs/: InterfaceTab.cpp  InterfaceTab.h  PathTab.cpp  PathTab.h  ShortcutTab.cpp  ShortcutTab.h
Project/: Project.h  ProjectExportHandler.cpp  ProjectExportHandler.h  ProjectExportHelper.cpp  ProjectExportHelper.h  ProjectExportThread.cpp  ProjectExportThread.h  ProjectFileHandler.cpp  ProjectFileHandler.h  ProjectFileHelper.cpp  ProjectFileHelper.h  ProjectManager.cpp  ProjectManager.h
Ressources/: defaultPref.json  help_dialog_illustrations.qrc  icon_ressources.qrc  logo_ressources.qrc  pref_ressources.qrc  supported_formats.json  supported_formats_resources.qrc
Ressources/lang/: de.json  en.json  es.json  fr.json  it.json  pt.json
Ressources/logo/: numalyse_logo_white.icns  numalyse_player_logo.icns  numalyse_player_logo_mac.icns
Ressources/logo/old logo/version-1/: numalyse_logo.icns  numalyse_logo_white.icns
Timeline/: ABManager.cpp  ABManager.h  AnnotationItemManager.cpp  AnnotationItemManager.h  BaseRangeManager.h  ItemTypes.h  SegmentationThread.cpp  SegmentationThread.h  ShotManager.cpp  ShotManager.h  ThumbnailWorker.cpp  ThumbnailWorker.h  TimelineMath.cpp  TimelineMath.h  TimelineView.cpp  TimelineView.h  TimelineWidget.cpp  TimelineWidget.h  TransitionManager.cpp  TransitionManager.h
Timeline/Items/: ABMarkerItem.cpp  ABMarkerItem.h  AnnotationHandleItem.cpp  AnnotationHandleItem.h  AnnotationItem.cpp  AnnotationItem.h  AudioShotItem.cpp  AudioShotItem.h  AudioVisualizerItem.cpp  AudioVisualizerItem.h  CursorItem.cpp  CursorItem.h  RangeMarkerItem.cpp  RangeMarkerItem.h  RulerItem.cpp  RulerItem.h  ShotItem.cpp  ShotItem.h  TransitionMarkerItem.cpp  TransitionMarkerItem.h
ToolbarButtons/: ToolbarButton.cpp  ToolbarButton.h  ToolbarPopupButton.cpp  ToolbarPopupButton.h  ToolbarToggleButton.cpp  ToolbarToggleButton.h  ToolbarToggleHoverButton.cpp  ToolbarToggleHoverButton.h
Toolbars/: AdvancedToolbar.cpp  AdvancedToolbar.h  ExtensionToolbar.cpp  ExtensionToolbar.h  GlobalToolbar.cpp  GlobalToolbar.h  SimpleToolbar.cpp  SimpleToolbar.h  TimeEdit.cpp  TimeEdit.h  TimeValidator.cpp  TimeValidator.h  Toolbar.cpp  Toolbar.h
installer/: setup.iss
pyScripts/: export_docx.py  export_pptx.py  segmentation.py
tools/: fix_bundle_paths.sh
